<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.athena.quizcarlosibarrai077117.MainActivity">



<android.support.design.widget.FloatingActionButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:src="@drawable/plus"
    android:layout_margin="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/backgroundindex">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/financiar"
            android:textColor="@android:color/white"
            android:layout_above="@id/value"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"/>
        <TextView
                android:id="@+id/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="20dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/value"
                android:textSize="12dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/ingreso1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingresos"
                    android:textColor="@color/colorSubText"
                    android:layout_above="@id/valor2" />

                <TextView
                    android:id="@+id/valor2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$1.173.000"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20dp"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+13%"
                    android:layout_toRightOf="@id/ingreso1"
                    android:layout_above="@id/valor2"
                    android:background="@drawable/borde1"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/ingreso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingresos"
                    android:textColor="@color/colorSubText"
                    android:layout_above="@id/valor1" />

                <TextView
                    android:id="@+id/valor1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$1.173.000"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20dp"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+13%"
                    android:layout_toRightOf="@id/ingreso"
                    android:layout_above="@id/valor1"
                    android:background="@drawable/borde1"/>

            </RelativeLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorGray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transacciones"
                android:layout_weight="1"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mas"
                android:layout_margin="10dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/arrow"
                android:layout_margin="10dp"/>
        </LinearLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </RelativeLayout>


                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>